--- a/quiz/quiz2/README
+++ b/quiz/quiz2/README
@@ -1,1 +1,32 @@
-Quiz #2:
+Quiz #2:  
+
+1.  
+(A) 
+(B) 
+
+2.  
+(A) Fortran  
+(B) made in the 1960s  
+
+3.  
+(A) Python  
+(B) Third-generation  
+
+4.  
+1970s, 1980s, 1990s.  
+
+5.  
+Fortran  
+
+6.  
+Python  
+
+7.  
+Fortran
+
+8.  
+>> c = cell{2,2}  
+>> c(1,1) = [1,3,-7;2,0,6;0,5,1]  
+>> c(1,2) = ['This' 'is' 'a' 'text' 'string.']
+>> c(2,1) = [3 + 4i,-5;-10i,3 - 4i]
+>> c(2,2) = [ ]
