--- a/quiz/quiz2/README
+++ b/quiz/quiz2/README
@@ -25,8 +25,25 @@ Python
 Fortran
 
 8.  
->> c = cell{2,2}  
->> c(1,1) = [1,3,-7;2,0,6;0,5,1]  
->> c(1,2) = ['This' 'is' 'a' 'text' 'string.']
->> c(2,1) = [3 + 4i,-5;-10i,3 - 4i]
->> c(2,2) = [ ]
+>> c = cell(2,2)  
+>> c{1,1} = [1,3,-7;2,0,6;0,5,1]  
+>> c{1,2} = ['This' 'is' 'a' 'text' 'string.']
+>> c{2,1} = [3 + 4i,-5;-10i,3 - 4i]
+>> c{2,2} = [ ]  
+
+9.  
+ans =  
+  
+   3.0000 + 4.0000i  -5.0000 + 0.0000i  
+   0.0000 -10.0000i   3.0000 - 4.0000i  
+You get this because the entire second column of the matrix is defined by a blank value and the complex number array previously inputed.  
+
+10.  
+Column-wise, meaning it stores and retrieves information as side-by-side columns, starting from the top of each column.
+
+11.  
+8 bytes  
+
+12.  
+It would only give the response of the highest possible number of int32, in this case 2147483647.  
+
